ACR2-2468: Minor bug fix for alignment issue with specia price on PDP.

--- a/docroot/themes/custom/alshaya_hnm/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/alshaya_hnm/sass/components/products/_product-detail.scss
@@ -142,7 +142,7 @@
     .has--special--price,
     .special--price,
     .price--discount {
-      display: inline-block;
+      display: inline-table;
     }
 
     .price--discount {
